--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,9 +8,10 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
-        "standard", 
-        "plugin:react-hooks/recommended", 
-        "plugin:prettier/recommended"
+        "standard",
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended",
+        "plugin:react/jsx-runtime"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -37,7 +38,7 @@
         }
     },
     "rules": {
-        "prettier/prettier": ["error", {}, { "usePrettierrc": true }],
+        "prettier/prettier": ["error", { "endOfLine": "auto" }, { "usePrettierrc": true }],
         "semi": [2, "always"],
         "space-before-function-paren": [0, { "anonymous": "always", "named": "always" }],
         "camelcase": 0,
