--- a/public/.prettierrc.json
+++ b/public/.prettierrc.json
@@ -4,5 +4,6 @@
     "semi": true,
     "singleQuote": true,
     "bracketSpacing": true,
-    "printWidth": 120
+    "printWidth": 120,
+    "endOfLine": "auto"
 }
