--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^20.3.2",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "millify": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
+    "socket.io-client": "^4.7.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -53,7 +56,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.195",
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
     "@types/react": "^18.2.14",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -73,5 +79,3 @@
     "prettier": "^2.8.8"
   }
 }
-
-
