--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.15.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "emoji-picker-react": "^4.4.10",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "millify": "^6.1.0",
@@ -57,6 +59,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/axios": "^0.14.0",
+    "@types/loadable__component": "^5.13.4",
     "@types/lodash": "^4.14.195",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
